force-app/main/default/objects/DW_PriceBook_Entry__c/DW_PriceBook_Entry__c.object-meta.xml
<CustomObject>
    <label>DW PriceBook Entry</label>
    <nameField>
        <label>DW PriceBook Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DW PriceBook Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>