force-app/main/default/objects/DW_PriceBook_Entry__c/fields/DWProduct__c.field-meta.xml
<CustomField>
    <fullName>DWProduct__c</fullName>
    <label>DWProduct</label>
    <referenceTo>DWProduct__c</referenceTo>
    <relationshipLabel>DW PriceBook Entries</relationshipLabel>
    <relationshipName>DW_PriceBook_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>