force-app/main/default/objects/DW_PriceBook_Entry__c/fields/DWProductPrices__c.field-meta.xml
<CustomField>
    <fullName>DWProductPrices__c</fullName>
    <label>DWProductPrices</label>
    <referenceTo>DWProductPrices__c</referenceTo>
    <relationshipLabel>DW PriceBook Entries</relationshipLabel>
    <relationshipName>DW_PriceBook_Entries</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>