force-app/main/default/objects/DW_PriceBook_Entry__c/fields/PRICEBOOK_ENTRY_KEY__c.field-meta.xml
<CustomField>
    <fullName>PRICEBOOK_ENTRY_KEY__c</fullName>
    <externalId>true</externalId>
    <label>PricebookEntryKey</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>