force-app/main/default/objects/DW_PriceBook_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DWProduct__c</columns>
    <columns>DWProductPrices__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IsActive__c</columns>
    <columns>UnitPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>